oxiplate-derive/tests/broken/if/if-let-missing-space-after-if.stderr
error: Expected one of: default_escaper_group, replace_escaper_group, extends, block, endblock, include, if, elseif, else, endif, for, continue, break, endfor, match, case, endmatch, let
 --> tests/broken/if/if-let-missing-space-after-if.rs:6:5
  |
6 | {%- ifvalue == true -%}
  |     ^^^^^^^
